--- a/EmailNotificationMicroservice/pom.xml
+++ b/EmailNotificationMicroservice/pom.xml
@@ -9,10 +9,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.pblgllgs</groupId>
-    <artifactId>ProductsMicroservice</artifactId>
+    <artifactId>EmailNotificationMicroservice</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>ProductsMicroservice</name>
-    <description>ProductsMicroservice</description>
+    <name>EmailNotificationMicroservice</name>
+    <description>EmailNotificationMicroservice</description>
     <url/>
     <licenses>
         <license/>
